--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@breezystack/lamejs": "^1.2.7",
     "@sapphi-red/web-noise-suppressor": "^0.3.5",
+    "@timephy/rnnoise-wasm": "^1.0.0",
+    "onnxruntime-web": "^1.22.0",
     "react": "^18.3.1",
     "react-audio-visualize": "^1.2.0",
     "react-dom": "^18.3.1"
